<resources>
    <string name="app_name">TFG_GeoFamily</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="familiares">Familiares</string>
    <string name="a_adir_familiar">Añadir familiar</string>
    <string name="subir_avatar">Subir avatar</string>
    <string name="logout">Logout</string>
    <string name="aqui_podras_subir_la_foto_de_tu_avatar_con_la_que_quieres_que_te_identifiquen_en_el_mapa">Aqui podras subir la foto de tu avatar, con la que quieres que te identifiquen en el mapa.</string>
</resources>