<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homeMapFragment2"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_listFragment2"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/familiares" />
        <item
            android:id="@+id/nav_addFamiliarFragment"
            android:icon="@drawable/ic_baseline_person_add_alt_1_24"
            android:title="@string/a_adir_familiar" />
        <item
            android:id="@+id/nav_uploadFragment"
            android:icon="@drawable/ic_baseline_cloud_upload_24"
            android:title="@string/subir_avatar"/>


        <item android:title="@string/logout">
            <menu>
                <item
                    android:id="@+id/nav_mainActivity"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>
</menu>